@@ -1,3 +1,10 @@
+2020-05-19  Kito Cheng  <kito.cheng@sifive.com>
+
+	* gcc.target/riscv/arch-3.c: Adjust option.
+	* gcc.target/riscv/arch-5.c: New.
+	* gcc.target/riscv/attribute-9.c: Adjust option and test
+	condition.
+
 2020-05-11  Kito Cheng  <kito.cheng@sifive.com>
 
 	* gcc/testsuite/g++.dg/ipa/pr94856.C: Require fgnu-tm.
